syntax = "proto3";

package proto.grpc.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/tyholling/golang/proto/grpc";

message Heartbeat {
  google.protobuf.Timestamp timestamp = 1;
}

message Metrics {
  double cpu = 1;
  double memory = 2;
  uint64 bytes_in = 3;
  uint64 bytes_out = 4;
  uint64 errors_in = 5;
  uint64 errors_out = 6;
  uint64 discards_in = 7;
  uint64 discards_out = 8;
}
